--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sso_lib_nodejs",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "librarie de communication la base sso for nodeJS",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -10,21 +10,21 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "testing": "node dist/test.js",
-    "pub": "git checkout master && npm version $npm_package_version && git checkout dev",
+    "pub": "git checkout master && npm version %npm_package_version% && git checkout dev",
     "vMajor": "npm run initNewVBrach && npm --no-git-tag-version version major  && npm run pub",
     "vMinor": "npm run initNewVBrach && npm --no-git-tag-version version minor && npm run pub",
-    "initNewVBrach": "git checkout -b V$npm_package_version && git push --set-upstream origin V$npm_package_version && git add -A && git push && git checkout dev ",
+    "initNewVBrach": "git checkout -b V%npm_package_version% && git push --set-upstream origin V%npm_package_version% && git add -A && git push && git checkout dev ",
     "vPatch": "npm --no-git-tag-version version patch && npm run pub",
-    "postversion": "git tag dev_$npm_package_version && git add -A && git commit -m 'dev_$npm_package_version' && git push && git push --tags ",
+    "postversion": "git tag dev_%npm_package_version% && git add -A && git commit -m 'dev_%npm_package_version%' && git push && git push --tags ",
     "publi": "npm run build && npm run vPatch"
   },
   "scriptsDev": {
-    "pub": "git checkout master && npm version $npm_package_version && git checkout dev",
+    "pub": "git checkout master && npm version %npm_package_version% && git checkout dev",
     "vMajor": "npm run initNewVBrach && npm --no-git-tag-version version major  && npm run pub",
     "vMinor": "npm run initNewVBrach && npm --no-git-tag-version version minor && npm run pub",
-    "initNewVBrach": "git checkout -b V$npm_package_version && git push --set-upstream origin V$npm_package_version && git add -A && git push && git checkout dev ",
+    "initNewVBrach": "git checkout -b V%npm_package_version% && git push --set-upstream origin V%npm_package_version% && git add -A && git push && git checkout dev ",
     "vPatch": "npm --no-git-tag-version version patch && npm run pub",
-    "postversion": "git tag dev_$npm_package_version && git add -A && git commit -m 'dev_$npm_package_version' && git push && git push --tags ",
+    "postversion": "git tag dev_%npm_package_version% && git add -A && git commit -m 'dev_%npm_package_version%' && git push && git push --tags ",
     "publi": "npm run build && npm run vPatch"
   },
   "scriptsMaster": {
@@ -36,14 +36,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HF-dev/sso_lib_nodejs.git"
+    "url": "git+https://github.com/daesign-dev/sso_lib_nodejs.git"
   },
   "author": "hf-dev",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HF-dev/sso_lib_nodejs/issues"
+    "url": "https://github.com/daesign-dev/sso_lib_nodejs/issues"
   },
-  "homepage": "https://github.com/HF-dev/sso_lib_nodejs#readme",
+  "homepage": "https://github.com/daesign-dev/sso_lib_nodejs#readme",
   "dependencies": {
     "assert": "^1.4.1",
     "fs-extra": "^3.0.1",
@@ -51,7 +51,7 @@
     "node-jose": "^0.10.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
-    "utils": "github:hf-dev/utils"
+    "utils": "github:daesign-dev/utils"
   },
   "devDependencies": {
     "@types/assert": "0.0.31",
