Reference daesign utils lib

--- a/package.json
+++ b/package.json
@@ -29,21 +29,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HF-dev/sso_lib_nodejs.git"
+    "url": "git+https://github.com/daesign-dev/sso_lib_nodejs.git"
   },
-  "author": "hf-dev",
+  "author": "daesign-dev",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HF-dev/sso_lib_nodejs/issues"
+    "url": "https://github.com/daesign-dev/sso_lib_nodejs/issues"
   },
-  "homepage": "https://github.com/HF-dev/sso_lib_nodejs#readme",
+  "homepage": "https://github.com/daesign-dev/sso_lib_nodejs#readme",
   "dependencies": {
     "assert": "^1.4.1",
     "fs-extra": "^3.0.1",
     "lodash": "^4.17.4",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
-    "utils": "github:hf-dev/utils"
+    "utils": "github:daesign-dev/utils"
   },
   "devDependencies": {
     "@types/assert": "0.0.31",
